--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <button id="generate-btn">Generate</button>
         <h2 id="pulled-title" class="hidden">Pulled</h2>
         <div id="character-list"></div>
-        <div id="total-cost"></div> <!-- Ajout de l'élément pour le coût total -->
+        <div id="total-cost"></div>
     </div>
 
     <script src="script.js"></script>
